# hotels_app

./: .env-non-dev  .flake8  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
app/: config.py  conftest.py  database.py  exceptions.py  main.py
app/admin/: auth.py  views.py
app/bookings/: dao.py  models.py  router.py
app/dao/: base.py
app/hotels/: dao.py  dependencies.py  models.py  router.py
app/hotels/rooms/: dao.py  models.py  router.py
app/images/: router.py
app/importer/: bookings.csv  router.py
app/migrations/: env.py
app/migrations/versions/: a499d9062b41_initial_migration.py  d0bb2e0c969b_added_users_rooms_bookings_tables.py
app/pages/: router.py
app/tasks/: celery_setup.py  email_templates.py  scheduled.py  tasks.py
app/templates/: hotels.html
app/tests/: conftest.py  mock_hotels.json  mock_rooms.json  mock_users.json
app/tests/integration_tests/test_bookings/: test_api.py  test_dao.py
app/tests/integration_tests/test_hotels/: test_api.py
app/tests/integration_tests/test_users/: test_api.py
app/tests/unit_tests/test_users/: test_dao.py
app/users/: auth.py  dao.py  dependencies.py  models.py  router.py
